# rosbook_pkgs

./: .actions.rosinstall  .gitignore  .kinetic_depends.rosinstall  .travis.yml  README.md  install_dep.sh
chapter1/: README.md
chapter10/actionlib_sample/: CMakeLists.txt  package.xml
chapter10/actionlib_sample/script/: simple_client.py  simple_server.py  simple_server2.py  ten_times_publisher.py
chapter10/smach_sample/: CMakeLists.txt  package.xml
chapter10/smach_sample/launch/: spawn_beer_cup.launch  spawn_object.launch  spawn_object_with_delay.launch  spawn_table.launch
chapter10/smach_sample/script/: smach_pr2.py  smach_sample.py
chapter10/smach_sample/src/: simple_gripper.cpp
chapter11/chapter11/: CMakeLists.txt  package.xml
chapter11/pluginlib_arrayutil/: CMakeLists.txt  README.md  arrayutil_plugins.xml  package.xml
chapter11/pluginlib_arrayutil/include/pluginlib_arrayutil/: arrayutil_base.h  ave.h  max.h  min.h  sum.h
chapter11/pluginlib_arrayutil/src/: arrayutil_base.cpp  ave.cpp  max.cpp  min.cpp  sum.cpp
chapter11/pluginlib_arrayutil/test/: pluginlib_arrayutil.test  pluginlib_arrayutil_test.cpp
chapter11/pluginlib_arrayutil_client/: CMakeLists.txt  README.md  package.xml
chapter11/pluginlib_arrayutil_client/include/pluginlib_arrayutil_client/: pluginlib_arrayutil_client.h
chapter11/pluginlib_arrayutil_client/launch/: pluginlib_arrayutil_client.launch
chapter11/pluginlib_arrayutil_client/src/: client_node.cpp  pluginlib_arrayutil_client.cpp
chapter12/arrayutil_python/: CMakeLists.txt  package.xml
chapter12/arrayutil_python/script/: arrayutil_python_base.py  arrayutil_python_sub.py
chapter12/arrayutil_python/test/: arrayutil_python.test  arrayutil_python_testcases.py  run_tests.py
chapter13/chapter13/: CMakeLists.txt  package.xml
chapter14/cloud_excercise/: CMakeLists.txt  package.xml
chapter14/cloud_excercise/data/: not_rotated.pcd
chapter14/cloud_excercise/include/cloud_exercise/: cloud_common.h  operation_handler.h
chapter14/cloud_excercise/launch/: clustering.launch  creation.launch  downsampling.launch  filtering.launch  matching.launch  planar_segmentation.launch  reading.launch
chapter14/cloud_excercise/rviz/: creator.rviz  exercise.rviz  matching.rviz  planar_segmentation.rviz  reading.rviz
chapter14/cloud_excercise/src/: cloud_clusterer.cpp  cloud_creator.cpp  cloud_downsampler.cpp  cloud_filter.cpp  cloud_matcher.cpp  cloud_planar_segmenter.cpp  cloud_reader.cpp
chapter4/: CMakeLists.txt  package.xml
chapter4/src/: rosbag_example_publisher.cpp  rosbag_example_subscriber.cpp  rqtplot_example.cpp
chapter5/: CMakeLists.txt  README.md  package.xml
chapter5/config/: pan_tilt.yaml
chapter5/launch/: pan_tilt_controller.launch  usb_cam.launch
chapter5/script/: joy_pan_tilt.py
chapter6/fourth_robot_control/: CMakeLists.txt  package.xml
chapter6/fourth_robot_control/config/: controller.yaml
chapter6/fourth_robot_control/launch/: fourth_robot_control.launch
chapter6/fourth_robot_description/: CMakeLists.txt  package.xml
chapter6/fourth_robot_description/launch/: fourth_robot_description.launch
chapter6/fourth_robot_description/launch/config/: fourth_robot_description.rviz
chapter6/fourth_robot_description/meshes/STL/base/: base_link.stl
chapter6/fourth_robot_description/robots/: fourth_robot.urdf.xacro
chapter6/fourth_robot_description/urdf/: common.xacro
chapter6/fourth_robot_description/urdf/base/: base.urdf.xacro
chapter6/fourth_robot_description/urdf/sensors/gim30/: gim30.urdf.xacro
chapter6/fourth_robot_description/urdf/wheel/: wheel.gazebo.xacro  wheel.transmission.xacro  wheel.urdf.xacro
chapter6/fourth_robot_gazebo/: CMakeLists.txt  package.xml
chapter6/fourth_robot_gazebo/config/joy/: flight_stick.yaml  fourth_robot.yaml  ps2.yaml  ps3.yaml
chapter6/fourth_robot_gazebo/launch/: fourth_robot_with_empty_world.launch  fourth_robot_with_husky_playworld.launch
chapter6/fourth_robot_gazebo/worlds/: clearpath_playpen_path_test.world
chapter6/tf_tutorial/: CMakeLists.txt  package.xml
chapter6/tf_tutorial/launch/: tf_tutorial.launch
chapter6/tf_tutorial/rviz/: tf_sample.rviz
chapter6/tf_tutorial/scripts/: tf2_broadcaster.py  tf2_listener.py  tf2_static_broadcaster.py  tf_broadcaster.py  tf_listener.py
chapter6/tf_tutorial/src/: tf2_broadcaster.cpp  tf2_listener.cpp  tf2_static_broadcaster.cpp  tf_broadcaster.cpp  tf_listener.cpp
chapter6/urdf_example_robot/: CMakeLists.txt  package.xml
chapter6/urdf_example_robot/launch/: display.launch
chapter6/urdf_example_robot/launch/config/: display.rviz
chapter6/urdf_example_robot/meshes/COLLADA/: test.dae
chapter6/urdf_example_robot/meshes/STL/: test.stl
chapter6/urdf_example_robot/urdf/: minimum_robot.urdf  minimum_visual_robot.urdf
chapter7/: CMakeLists.txt  README.md  package.xml
chapter7/chapter7/: CMakeLists.txt  package.xml
chapter7/devel/: setup.sh
chapter7/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
chapter7/src/: test_get_input.cpp
chapter7/test_opencv/: CMakeLists.txt  package.xml
chapter7/test_opencv/devel/: _setup_util.py  env.sh  setup.bash  setup.zsh
chapter7/test_opencv/include/test_opencv/: opencv_ros.hpp
chapter7/test_opencv/launch/: opencv_ros.launch  test_edge_detection.launch  test_feature_detection.launch  test_feature_detection_matching.launch  test_get_input.launch
chapter7/test_opencv/rviz/: opencv_ros.rviz  test_get_input.rviz
chapter7/test_opencv/src/: opencv_ros.cpp  opencv_ros_node.cpp  test_edge_detection.cpp  test_feature_detection.cpp  test_feature_detection_matching.cpp  test_get_input.cpp  test_opencv.cpp  test_svm.cpp
chapter8/cloud_excercise/: CMakeLists.txt  package.xml
chapter8/cloud_excercise/data/: rotated.pcd
chapter8/cloud_excercise/launch/: filtering.launch  loading.launch
chapter8/cloud_excercise/rviz/: clustering.rviz  creation.rviz  downsampling.rviz  filtering.rviz
chapter8/cloud_excercise/src/: cloud_clusterer.cpp  cloud_creator.cpp  cloud_downsampler.cpp  cloud_loader.cpp  cloud_planar_segmenter.cpp
index/: README.md
(+61 files in other folders)
