<?xml version="1.0"?>
<package>
  <name>chapter4</name>
  <version>0.1.0</version>
  <description>The chapter4 package</description>

  <maintainer email="k104073r@mail.kyutech.jp">Ryodo Tanaka</maintainer>
  <author email="k104073r@mail.kyutech.jp">Ryodo Tanaka</author>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
