<?xml version="1.0"?>
<package>
  <name>chapter5</name>
  <version>0.1.0</version>
  <description>The chapter5 package</description>

  <maintainer email="k104073r@mail.kyutech.jp">RyodoTanaka</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>usb_cam</run_depend>

</package>
