<?xml version="1.0"?>
<package>
  <name>chapter5</name>
  <version>0.1.0</version>
  <description>The chapter5 package</description>

  <maintainer email="k104073r@mail.kyutech.jp">RyodoTanaka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>image_view</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>usb_cam</run_depend>

</package>
