<?xml version="1.0"?>
<package format="2">
  <name>chapter5</name>
  <version>0.1.0</version>
  <description>The chapter5 package</description>

  <maintainer email="k104073r@mail.kyutech.jp">RyodoTanaka</maintainer>
  <maintainer email="p595201m@mail.kyutech.jp">MoriKen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>dynamixel_contlollers</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <test_depend>roslaunch</test_depend>

</package>
