<?xml version="1.0"?>
<package format="2">
  <name>actionlib_sample</name>
  <version>0.0.0</version>
  <description>The actionlib_sample package</description>

  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib_tutorials</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
