<?xml version="1.0"?>
<package format="2">
  <name>actionlib_sample</name>
  <version>0.0.0</version>
  <description>The actionlib_sample package</description>

  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>actionlib_tutorials</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
