<?xml version="1.0"?>
<package format="2">
  <name>pluginlib_arrayutil_client</name>
  <version>0.0.0</version>
  <description>The pluginlib_arrayutil_client package</description>

  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <build_depend>pluginlib_arrayutil</build_depend>
</package>
