<?xml version="1.0"?>
<package format="2">
  <name>arrayutil_python</name>
  <version>0.0.0</version>
  <description>The arrayutil_python package</description>

  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

  <test_depend>rostest</test_depend>
</package>
