<?xml version="1.0"?>
<package>
  <name>fourth_robot_control</name>
  <version>1.0.0</version>
  <description>The fourth_robot_control package</description>

  <maintainer email="nishidatakeshilab@gmail.com">Nishida Lab</maintainer>
  <author email="k104073r@mail.kyutech.jp">RyodoTanaka</author>

  <license>TODO</license>
  
  <url type="repository">https://github.com/Nishida-Lab/rosbook_pkgs.git</url>
  <url type="bugtracker">https://github.com/Nishida-Lab/rosbook_pkgs/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>  
  <run_depend>controller_manager</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>

</package>
