<?xml version="1.0"?>
<package>
  <name>fourth_robot_gazebo</name>
  <version>1.0.0</version>
  <description>The fourth_robot_gazebo package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/CIR-KIT/fourth_robot_pkg</url>
  
  <author email="groadpg@gmail.com">RyodoTanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>fourth_robot_control</run_depend>
</package>
