<?xml version="1.0"?>
<package format="2">
  <name>fourth_robot_gazebo</name>
  <version>1.0.0</version>
  <description>The fourth_robot_gazebo package</description>

  <maintainer email="nishidatakeshilab@gmail.com">Nishida Lab</maintainer>
  <author email="k104073r@mail.kyutech.jp">RyodoTanaka</author>

  <license>TODO</license>
  
  <url type="repository">https://github.com/Nishida-Lab/rosbook_pkgs.git</url>
  <url type="bugtracker">https://github.com/Nishida-Lab/rosbook_pkgs/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>fourth_robot_control</exec_depend>
  <exec_depend>fourth_robot_description</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
