<?xml version="1.0"?>
<package format="2">
  <name>urdf_example_robot</name>
  <version>0.1.0</version>
  <description>The urdf_example_robot package</description>

  <maintainer email="nishidatakeshilab@gmail.com">Nishida Lab</maintainer>
  <author email="k104073r@mail.kyutech.jp">RyodoTanaka</author>

  <license>TODO</license>
  
  <url type="repository">https://github.com/Nishida-Lab/rosbook_pkgs.git</url>
  <url type="bugtracker">https://github.com/Nishida-Lab/rosbook_pkgs/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>roslaunch</test_depend>
  
</package>
